--- a/scss/components/pages/_mainCredits.scss
+++ b/scss/components/pages/_mainCredits.scss
@@ -13,6 +13,28 @@
     text-align: center;
     
     // background-color: rgba(128, 128, 128, 0.612);
+    
+    &__svtNamesDiv{
+        // background-color: #f7cac9;
+        // width: 50%;
+        overflow: hidden;
+        &__svtNames{
+            text-align: left;
+            
+            span{
+                opacity: 0.2;
+                margin-left: 1em;
+                margin-right: 1em;
+                transition: all 1s ease-in-out;
+
+                &:hover{
+                    opacity: 0.8;
+                    // transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
+                    transition: all 1s ease-in-out;
+                }
+            }
+        }
+    }
 
     // &__fanpage{
     //     position: absolute;
@@ -28,7 +50,7 @@
     // }
 
     &__bio{
-        padding: 2em;
+        padding: 1em;
 
         &__iAm{
             font-size: 2em;
@@ -40,7 +62,7 @@
     }
 
     &__photos{
-        padding: 2em;
+        padding: 1em;
 
         &__from{
             font-size: 2em;
