--- a/scss/components/pages/_mainHome.scss
+++ b/scss/components/pages/_mainHome.scss
@@ -1,23 +1,4 @@
-.loading-screen {
-    position: relative;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
-    background-color: #4bedc2;
-    width: 100%;
-    height: 0%;
-}
 
-.load-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vh;
-    height: 100%;
-    overflow: hidden;
-    z-index: 10;
-    pointer-events: none;
-}
 
 .mainHome{
     font-family: $discographyfont;
@@ -26,158 +7,36 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90vw;
-    height: 100%;
+    height: 90%;
+    // background-color: rgba(255, 255, 255, 0.153);
     overflow: hidden;
 
     &__paragraph{
-        margin-top: 10em;
-        width: 100vw;
-        height: 100%;
-        &__topic{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        height: 90%;
+        text-align: center;
+
+        &__image{
+            background: url("../../../images/home_page/attacca/attacca_group_photo_1.jpeg") no-repeat fixed center 55%;
+            background-size: cover;
+            filter: grayscale(80%) opacity(0.5);
+            // filter: grayscale(80%) hue-rotate(20);
+            width: 100%;
+            height: 100%;
+        }
+       
+        h1{
             position: absolute;
-            // content: "Name";
-            font-size: 1.8em;
-            opacity: 0.2;
-            margin-top: 0.1em;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 5em;
+            width: 100%;
         }
 
-        &__title{
-            // position: absolute;
-            top: 1em;
-            font-size: 7em;
-
-            span{
-                opacity:  0;
-                transition:  all 0.4s ease;
-
-                
-            }
-            span.fade{
-                    opacity: 1;
-                }
-
-            
-        }
-
-        &__subtitle{
-            position: absolute;
-            text-decoration: none;
-            top: 8em;
-            right: 1em;
-            font-size: 1.2em;
-            border: 1px solid silver;
-            border-radius: 50%;
-            padding: 3em 1em;
-            width: 150px;
-            text-align: center;
-            transition: 1s ease-in-out;
-            color: dimgray;
-            transition: 1s ease-in-out;
-
-            &:hover{
-                color: white;
-                opacity: 1;
-                backdrop-filter: invert(50%);
-                transition: 1s ease-in-out;
-            }
-
-            &::before{
-                position: absolute;
-                content: "";
-                border: 1px solid silver;
-                border-radius: 50%;
-                padding: 3.6em;
-                top: 0;
-                left: 0;
-                // transition: 1s ease-in-out;
-                
-            }
-            &::after{
-                position: absolute;
-                content: "";
-                border: 1px solid silver;
-                border-radius: 50%;
-                padding: 3.6em;
-                top: -0.1em;
-                left: 0.2em;
-                // transition: 1s ease-in-out;
-            }
-        }
-
-        &__description{
-            // position: absolute;
-            width: 70%;
-            margin-bottom: 1em;
-            
-        }
-
-        &__images{
-            display: grid;
-            grid-template-columns: 35% 52%;
-            grid-gap: 2%;
-
-            &__image1Div{
-                // height: 300px;
-                // backdrop-filter: invert(90%);
-                &__image1{
-                    // background-color: dimgray;
-                    backdrop-filter: invert(90%);
-                    width: 100%;
-                    height: 250px;
-                    object-fit: cover;
-                    // object-position: center;
-                }
-                
-            }
-            
-            &__image2Div{
-                &__image2{
-                    backdrop-filter: invert(90%);
-                    width: 100%;
-                    height: 400px;
-                    object-fit: cover;
-                    // object-position: center;
-                }
-            }
-        }
-
-        &__imagesOutside{
-            &__image3{
-                // position: absolute;
-                // // top: -45%;
-                // bottom: 0;
-                // width: 60%;
-                // height: 50%;
-                // z-index: -1;
-                // object-fit: cover;
-                // // object-position: center -50%;
-                // object-position: top;
-                // border-radius: 10%;
-                // filter: brightness(40%) grayscale(100%);//  opacity(0.5)
-                display: none;
-            }
-
-            &__image4{
-                position: absolute;
-                bottom: -22em;
-                width: 38%;
-                height: 50%;
-                z-index: -1;
-                object-fit: cover;
-                border-radius: 20px;
-                filter: brightness(20%) grayscale(100%);
-            }
-            &__image5{
-                position: absolute;
-                right: 1em;
-                bottom: -24em;
-                width: 57%;
-                height: 50%;
-                z-index: -1;
-                object-fit: cover;
-                border-radius: 20px;
-                filter: brightness(20%) grayscale(100%);
-            }
-        }
     }
 }
